posiGen_FullsendBox/src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Required to close issue</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Processing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Bill (Received)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/QC Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sticker/ Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove\Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_for_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request to send to Contractor.</description>
        <inlineHelpText>This field triggers an email alert when given a value.</inlineHelpText>
        <label>Request for Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resend_To_Contractor2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Triggers another email notification to the Contractor</inlineHelpText>
        <label>Resend To Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resend_to_Contractor__c</fullName>
        <inlineHelpText>This field triggers an email alert when given a value.</inlineHelpText>
        <label>Old_ToBeDeleted_Resend to Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Carimi Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Contractors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Number__c</fullName>
        <label>Secondary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Select_Service_Contractor__c</fullName>
        <label>Select Service Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Uptown Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Contractors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Case_Notifications_To__c</fullName>
        <label>Send Case Notifications To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <formula>TEXT(PG_Product__r.Opportunity__r.Property__r.Zip_for_Service_Areas__r.Service_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Repair Work Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFL&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulking and Weather-stripping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Heater Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duct Sealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety- Serious Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Due_Date__c</fullName>
        <formula>Date_Sent_to_Service_Contractor__c + 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>QA/QC Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Quality Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove &amp; Reinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_System__c</fullName>
        <label>Size of System</label>
        <picklist>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Manager Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Meter Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Name_for_Sharing_Rule__c</fullName>
        <description>This is a text version of the Subcontractor name, this is required b/c sharing rules can&apos;t filter on formula / lookup fields.</description>
        <label>Subcontractor Name for Sharing Rule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject1__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuppliedCompany__c</fullName>
        <label>Web Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedEmail__c</fullName>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SuppliedName__c</fullName>
        <label>Web Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedPhone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This gets backfilled 1/hr by a process</description>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Cases4</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truck_Roll_Subtype__c</fullName>
        <label>Truck Roll Subtype</label>
        <picklist>
            <controllingField>Truck_Roll_Type__c</controllingField>
            <picklistValues>
                <fullName>Itron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Truck_Roll_Type__c</fullName>
        <label>Truck Roll Type</label>
        <picklist>
            <picklistValues>
                <fullName>C/U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Meter__c</fullName>
        <label>Type of Meter</label>
        <picklist>
            <controllingField>Is_there_a_Net_Meter_Present__c</controllingField>
            <picklistValues>
                <fullName>Analog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_System__c</fullName>
        <label>Type of System</label>
        <picklist>
            <picklistValues>
                <fullName>Growatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Brigde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_Phase_is_it_currently__c</fullName>
        <label>What Phase is it currently?</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Case_Description__c</columns>
        <columns>Initial_Case_Comment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Cases</label>
    </listViews>
    <listViews>
        <fullName>X2016_Cases</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>2016 Cases</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>EE_Cases</fullName>
        <active>true</active>
        <description>New and Existing Customer Calls</description>
        <label>EE</label>
    </recordTypes>
    <recordTypes>
        <fullName>EE_Contractors</fullName>
        <active>false</active>
        <label>EE Contractors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Cases</fullName>
        <active>true</active>
        <label>PV</label>
    </recordTypes>
    <recordTypes>
        <fullName>PM</fullName>
        <active>true</active>
        <description>Project Management Cases</description>
        <label>PM</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF2</fullName>
        <active>true</active>
        <description>SF2 201402 Implementation</description>
        <label>SF2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Thermal</fullName>
        <active>true</active>
        <label>Thermal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Partner_Case_Statuses</fullName>
        <active>true</active>
        <description>Restricts Partner users from selecting any case status other than New, Escalated, or Request Manager Review.</description>
        <errorConditionFormula>AND(
NOT(OR(
 (ISPICKVAL( Status__c , &quot;New&quot;)),
 (ISPICKVAL( Status__c , &quot;Escalated&quot;)),
 (ISPICKVAL( Status__c , &quot;Request Manager Review&quot;))
)),
  CONTAINS($Profile.Name, &quot;Partner User&quot;)

)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You do not have permission to select this status value. Please select New, Escalated, or Request Manager Review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SL_Check_Closing_Reason_is_provided</fullName>
        <active>true</active>
        <description>Check that the Reason field is updated when issue is set to Closed</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c , &quot;Closed&quot;), 
ISPICKVAL(Reason__c , &quot;&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason for this Issue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SL_Check_appropriate_user_is_Closing</fullName>
        <active>true</active>
        <description>Check that only user with the Project Manager profile or particular users have access to set Issue status to Close</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c , &quot;Closed&quot;), 
$User.ProfileId &lt;&gt;&quot;00ed0000000X41L&quot;, 
$User.Alias &lt;&gt;&apos;hgord&apos;, 
$User.Alias &lt;&gt;&apos;amash&apos;, 
$User.Alias &lt;&gt;&apos;dhankton&apos;, 
$User.Alias &lt;&gt;&apos;mking&apos;, 
$User.Alias &lt;&gt;&apos;gwood&apos;, 
$User.Alias &lt;&gt;&apos;enewe&apos; 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You do not have permission to close out this issue, please reach out to an appropriate user.</errorMessage>
    </validationRules>
</CustomObject>